--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Alistair Wong
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: A software engineer from the Bay Area
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/aowongster.png?size=200
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: aowongster
   instagram:
-  linkedin:
+  linkedin: aowong
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
